# pianobar

./: .gitignore  CMakeLists.txt  INSTALL
libezxml/src/: CMakeLists.txt  ezxml.c
libpiano/src/: CMakeLists.txt  crypt.c  piano.c  xml.c  xml.h
libwaitress/src/: CMakeLists.txt  waitress.c
src/: CMakeLists.txt  config.h.in  main.c  ui.c  ui_readline.c
